--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,18 +18,18 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0-259.8.beta <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
   flutter_neumorphic: ^3.0.4+1
-  flutter_svg: ^0.20.0-nullsafety.3
+  flutter_svg: ^0.19.1
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
