--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   path_provider: ^1.6.27
   flutter_local_notifications: ^4.0.1
   workmanager: ^0.2.3
+  intl: ^0.16.1
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -44,6 +45,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
