--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,4 +75,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.android.support:support-compat:28.0.0"
 }
